# scrutinizer

./: .gitignore  .gitmodules  Cargo.toml  README.md  analyze.sh  analyze_all.sh  count_regions.py  generate_graph.py  vartrack.sh
logs/: add.out  contains_btreemap.out  contains_hashmap.out  contains_hashset.out  contains_linked_list.out  contains_vec.out  foreign_crate.out  len_vec.out  println_side_effect.out  raw_ptr_deref_outer.out
purifier/: Cargo.toml
purifier/src/: fn_cast_visitor.rs  fn_visitor.rs  lib.rs  raw_ptr_deref_visitor.rs
purifier/src/vartrack/: compute.rs  facts.rs
purifier/src/visitors/: fn_visitor.rs  mod.rs  raw_ptr_deref_visitor.rs
scripts/: analyze.sh  analyze_all.sh  analyze_inconsistent.sh  generate_facts.sh  scrutinizer-install  scrutinizer-run
scrutils/: Cargo.toml
scrutils/src/: lib.rs
scrutils/src/analyzer/: analyzer.rs  deps.rs  mod.rs  result.rs
scrutils/src/analyzer/heuristics/: raw_ptr.rs  transmute.rs
scrutils/src/body_cache/: body_cache.rs  mod.rs
scrutils/src/collector/: apply_effects.rs  bottom_value.rs  closure_collector.rs  collector.rs  collector_domain.rs  dataflow_shim.rs  has_tracked_ty.rs  mod.rs
scrutils/src/collector/structs/: partial_function_info.rs  virtual_stack.rs
scrutils/src/common/: arg_tys.rs  closure_info.rs  function_call.rs  function_info.rs  mod.rs  tracked_ty.rs
scrutils/src/common/storage/: closure.rs  function.rs  mod.rs
scrutils/src/important/: aliases.rs  compute.rs  important.rs  mod.rs  nll_facts.rs  tab_delim.rs
scrutils/src/precheck/: mod.rs
scrutils/src/selector/: function.rs  mod.rs  ppr.rs
scrutinizer/: Cargo.toml
scrutinizer-lint/: Cargo.toml
scrutinizer-lint/src/: lib.rs
scrutinizer/src/: input_adapters.rs  lib.rs
scrutinizer/src/analyzer/: analyzer.rs  arg_ty.rs  checker.rs  dataflow_shim.rs  fn_call_info.rs  fn_data.rs  fn_ty.rs  function.rs  important_locals.rs  instance_ext.rs  local_ty_collector.rs  mod.rs  normalized_place.rs  partial_fn_data.rs  raw_ptr.rs  result.rs  ret_collector.rs  storage.rs  substs_ext.rs  tracked_ty.rs  traversal.rs  ty_ext.rs  type_tracker.rs  types.rs  upvar_tracker.rs  util.rs
scrutinizer/src/analyzer/heuristics/: mod.rs
scrutinizer/src/collector/: arg_tys.rs  callee.rs  closure_collector.rs  closure_info.rs  collector.rs  collector_domain.rs  contains_erased.rs  dataflow_shim.rs  fn_info.rs  has_arg_tys.rs  has_tracked_ty.rs  instance_ext.rs  mod.rs  normalized_place.rs  project_fresh.rs  propagate.rs  storage.rs  tracked_ty.rs  ty_ext.rs  type_collector.rs  type_tracker.rs  upvar_tracker.rs  virtual_stack.rs
scrutinizer/src/collector/storage/: closure.rs  function.rs  mod.rs
scrutinizer/src/collector/structs/: arg_tys.rs  closure_info.rs  function_info.rs  mod.rs  partial_function_info.rs  tracked_ty.rs
scrutinizer/src/collector/traits/: has_arg_tys.rs  mod.rs  refresh_and_project.rs
scrutinizer/src/common/: arg_tys.rs  function_info.rs
scrutinizer/src/common/storage/: function.rs
scrutinizer/src/important/: important.rs  intern.rs
scrutinizer/src/precheck/: mod.rs
scrutinizer/src/selector/: function.rs
scrutinizer/src/util/: mod.rs
scrutinizer/src/vartrack/: compute.rs  facts.rs  intern.rs  location_table.rs  mod.rs  tab_delim.rs
scrutinizer/src/visitors/: fn_call_storage.rs  fn_visitor.rs  function.rs  mod.rs  raw_ptr_deref_visitor.rs  types.rs  util.rs
src/: fn_visitor.rs  lib.rs  raw_ptr_deref_visitor.rs  uncast_visitor.rs
test-crate/: Cargo.toml  dylint.toml  lint.sh  once.rs  sample-scrutinizer-config.toml  scrutinizer-config.toml
test-crate/.cargo/: config.toml
test-crate/src/: btreemap.rs  dyn_test.rs  hashmap.rs  hashset.rs  lambdas.rs  lib.rs  linked_list.rs  misc.rs  raw_ptr.rs  structs.rs  vartrack.rs  vec.rs  vec_unhandled.rs
test-crate/src/collections/: hashset.rs  mod.rs  vec.rs  vec_unhandled.rs
test-crate/src/tests/: adversarial_intrinsic.rs  dyn.rs  dyn_test.rs  fn_ptr.rs  foreign.rs  lam.rs  lambdas.rs  leaky.rs  misc.rs  mod.rs  raw_ptr.rs  recursive.rs  static.rs  vartrack.rs  websubmit.rs
tests/: dylint.toml  run_lint.sh  run_lint_verbose.sh  run_tests.py
tests/btreemap/: Cargo.toml
tests/dyn/: Cargo.toml  dyn.rs  dyn.stderr
tests/fn_ptr/: Cargo.toml  fn_ptr.rs  fn_ptr.stderr
tests/foreign/: Cargo.toml  foreign.rs
tests/hashmap/: Cargo.toml  hashmap.rs  hashmap.stderr  lib.rs
tests/hashset/: Cargo.toml
tests/lam/: Cargo.toml  lam.rs  lam.stderr
tests/leaky/: Cargo.toml  leaky.rs  leaky.stderr
tests/linked_list/: Cargo.toml  dylint.toml
tests/raw_ptr/: Cargo.toml  raw_ptr.rs  raw_ptr.stderr
tests/recursive/: Cargo.toml  recursive.rs  recursive.stderr
tests/static/: Cargo.toml  static.rs  static.stderr
tests/structs/: Cargo.toml  structs.rs
tests/vartrack/: Cargo.toml  vartrack.rs  vartrack.stderr
tests/vec/: Cargo.toml  lib.rs  vec.stderr
tests/websubmit/: Cargo.toml  websubmit.rs  websubmit.stderr
vartrack/: Cargo.toml
vartrack/examples/: example.rs
vartrack/src/: intern.rs  lib.rs  main.rs  tab_delim.rs
