[package]
name = "pure-func"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustc_plugin = "=0.6.0-nightly-2023-04-12"
rustc_utils = "=0.6.0-nightly-2023-04-12"
env_logger = "0.10"
clap = {version = "4", features = ["derive"]}
serde = {version = "1", features = ["derive"]}
