[workspace]
members = ["scrutils", "scrutinizer"]
exclude = ["test-crate"]
resolver = "2"

[workspace.dependencies]
indexical = "0.3.1"
serde = "=1.0.193"
serde_json = "=1.0.107"
petgraph = { version = "0.6", features = ["serde-1"] }

rustc_utils = { version = "=0.7.4-nightly-2023-08-25", features = [
    "indexical",
] }
rustc_plugin = "=0.7.4-nightly-2023-08-25"

[workspace.dependencies.flowistry]
git = "https://github.com/brownsys/flowistry"
rev = "08c4ad9587b3251a8f7c64aa60be31404e6e04c0"
default-features = false

[replace."rustc_utils:0.7.4-nightly-2023-08-25"]
git = "https://github.com/JustusAdam/rustc_plugin"
rev = "e413907b2ae9a03d2c8e9aca3b72dd451a16b1db"

[replace."rustc_plugin:0.7.4-nightly-2023-08-25"]
git = "https://github.com/JustusAdam/rustc_plugin"
rev = "e413907b2ae9a03d2c8e9aca3b72dd451a16b1db"
