[package]
name = "scrutinizer_lint"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "assign_op"
path = "ui/assign_op.rs"

[dependencies]
clippy_utils = { git = "https://github.com/artemagvanian/rust-clippy-nightly-2023-04-12" }
dylint_linting = "2.1.8"
if_chain = "1.0.2"
regex = "1.9.1"
scrutils = { version = "0.1.0", path = "../scrutils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.12"

[dev-dependencies]
dylint_testing = "2.1.8"

[package.metadata.rust-analyzer]
rustc_private = true
