[package]
name = "scrutinizer"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
scrutils = { version = "0.1.0", path = "../scrutils" }

# rustc plugin
rustc_plugin = { git = "https://github.com/KinanBab/rustc_plugin.git" }

# miscellaneous
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
regex = "1.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.12"
